--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.6.10-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Robert Hooker <sarvatt@ubuntu.com>  Mon, 18 Oct 2010 15:50:48 -0400
+
 xserver-xorg-input-vmmouse (1:12.6.9-4) experimental; urgency=low
 
   * Merge xsfbs to get unversioned Provides.
