--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 xserver-xorg-input-vmmouse (1:12.6.10-1) UNRELEASED; urgency=low
 
+  [ Robert Hooker ]
   * New upstream release.
+
+  [ Cyril Brulebois ]
+  * Update debian/copyright from upstream COPYING.
 
  -- Robert Hooker <sarvatt@ubuntu.com>  Mon, 18 Oct 2010 15:50:48 -0400
 
