--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ xserver-xorg-input-vmmouse (1:12.6.10-1) UNRELEASED; urgency=low
   * Update debian/copyright from upstream COPYING.
   * Get rid of HAL-specific files since we're only buiding on Linux
     architectures; those files weren't installed anyway.
+  * Switch from --list-missing to --fail-missing for additional safety.
 
  -- Robert Hooker <sarvatt@ubuntu.com>  Mon, 18 Oct 2010 15:50:48 -0400
 
