--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.6.99.901-1) UNRELEASED; urgency=low
+
+  * New upstream release candidate.
+
+ -- Cyril Brulebois <kibi@debian.org>  Wed, 05 Jan 2011 01:51:36 +0100
+
 xserver-xorg-input-vmmouse (1:12.6.10-1) experimental; urgency=low
 
   [ Robert Hooker ]
