--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 xserver-xorg-input-vmmouse (1:12.6.99.901-1) UNRELEASED; urgency=low
 
   * New upstream release candidate.
+  * Bump xutils-dev build-dep for new macros.
 
  -- Cyril Brulebois <kibi@debian.org>  Wed, 05 Jan 2011 01:51:36 +0100
 
