--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
+
+  * Switch to dh:
+    - Use debhelper 8.
+    - Use dh-autoreconf.
+    - Bump xserver-xorg-dev build-dep for dh_xsf_substvars and xsf
+      debhelper sequence.
+    - Tweak vmmouse_detect's entry in .install, making explicit it is
+      installed under /usr/bin upstream, and shipped under /bin.
+
+ -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
+
 xserver-xorg-input-vmmouse (1:12.6.99.901-1) experimental; urgency=low
 
   * New upstream release candidate.
