--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
       installed under /usr/bin upstream, and shipped under /bin.
   * Remove xserver-xorg-input-vmmouse.postinst.in's .in suffix. There's
     no need to do any substitution.
+  * Remove xsfbs accordingly.
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
 
