--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
     no need to do any substitution.
   * Remove xsfbs accordingly.
   * Remove long obsolete Replaces.
+  * Update Uploaders list. Thanks, David & Brice!
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
 
