--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
   * Remove xsfbs accordingly.
   * Remove long obsolete Replaces.
   * Update Uploaders list. Thanks, David & Brice!
+  * Wrap Depends/Provides.
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
 
