--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
   * Remove long obsolete Replaces.
   * Update Uploaders list. Thanks, David & Brice!
   * Wrap Depends/Provides.
+  * Bump Standards-Version to 3.9.1 (no changes needed).
 
  -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
 
