--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.6.99.901-2) unstable; urgency=low
 
   * Switch to dh:
     - Use debhelper 8.
@@ -15,7 +15,7 @@ xserver-xorg-input-vmmouse (1:12.6.99.901-2) UNRELEASED; urgency=low
   * Wrap Depends/Provides.
   * Bump Standards-Version to 3.9.1 (no changes needed).
 
- -- Cyril Brulebois <kibi@debian.org>  Thu, 03 Feb 2011 05:55:04 +0100
+ -- Cyril Brulebois <kibi@debian.org>  Sat, 05 Feb 2011 14:41:08 +0100
 
 xserver-xorg-input-vmmouse (1:12.6.99.901-1) experimental; urgency=low
 
