--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.7.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Cyril Brulebois <kibi@debian.org>  Sun, 10 Apr 2011 23:20:06 +0200
+
 xserver-xorg-input-vmmouse (1:12.6.99.901-2) unstable; urgency=low
 
   * Switch to dh:
