--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+xserver-xorg-input-vmmouse (1:12.8.0-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Cyril Brulebois <kibi@debian.org>  Tue, 20 Mar 2012 21:01:09 +0000
+
 xserver-xorg-input-vmmouse (1:12.7.0-2) unstable; urgency=low
 
   * Pass --bindir=/bin to configure, lost in the dh-ification. Thanks to
