--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-xserver-xorg-input-vmmouse (1:12.9.0-1) UNRELEASED; urgency=low
+xserver-xorg-input-vmmouse (1:12.9.0-1) unstable; urgency=low
 
+  [ Robert Hooker ]
   * New upstream bugfix release.
     - Fixes erratic mouse behavior with a Windows x64 host. (LP: #996821)
     - Fixes initialization when no other drivers request hardware access.
 
- -- Robert Hooker <sarvatt@ubuntu.com>  Tue, 22 May 2012 16:30:11 -0400
+ -- Cyril Brulebois <kibi@debian.org>  Fri, 15 Jun 2012 02:21:58 +0200
 
 xserver-xorg-input-vmmouse (1:12.8.0-1) unstable; urgency=low
 
